--- a/_config.yml
+++ b/_config.yml
@@ -6,10 +6,10 @@
 name: aysebetul
 
 # Short bio or description (displayed in the header)
-description: Deep Learning Researcher
+description: Deep Learning, Brain-Computer Interface
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: 
+avatar: https://github.com/aysebetul/aysebetul.github.io/blob/master/images/logo.png
 
 #
 # Flags below are optional
