--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@ name: aysebetul
 description: Deep Learning, Brain-Computer Interface
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/aysebetul/aysebetul.github.io/blob/master/images/logo.png
+avatar: http://raw.githubusercontent.com/aysebetul/aysebetul.github.io/master/images/logo.png
 
 #
 # Flags below are optional
